[gd_scene load_steps=10 format=3 uid="uid://biy2th7ch5a2r"]

[ext_resource type="Script" path="res://card_container.gd" id="1_j1ohw"]
[ext_resource type="Script" path="res://board.gd" id="1_pvyj6"]
[ext_resource type="Script" path="res://discard_button.gd" id="2_j5pqj"]
[ext_resource type="Script" path="res://meld_button.gd" id="2_seyna"]
[ext_resource type="Script" path="res://deck.gd" id="2_sie3a"]
[ext_resource type="Texture2D" uid="uid://c7poq44a7a1gq" path="res://assets/boardgamePack_v2/Vector/playingCards.svg" id="3_iqj4u"]
[ext_resource type="Script" path="res://meld_container.gd" id="8_db5cs"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_quunf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vufhf"]

[node name="Board" type="Control" groups=["Board"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvyj6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.152727, 0.293169, 0.338079, 1)

[node name="MeldButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -60.0
offset_right = 168.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_quunf")
disabled = true
action_mode = 0
text = "Vylo≈æit"
script = ExtResource("2_seyna")

[node name="DiscardButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -60.0
offset_right = -64.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vufhf")
disabled = true
action_mode = 0
text = "Zahodit"
script = ExtResource("2_j5pqj")

[node name="Deck" type="Control" parent="."]
custom_minimum_size = Vector2(144, 194)
anchors_preset = 0
offset_left = 80.0
offset_top = 48.0
offset_right = 224.0
offset_bottom = 242.0
script = ExtResource("2_sie3a")
hand_size = 12

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
texture = ExtResource("3_iqj4u")
centered = false
offset = Vector2(2, 2)
hframes = 14
vframes = 4

[node name="Hand" type="Control" parent="." groups=["Hand"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -496.0
offset_top = 28.0
offset_right = 496.0
offset_bottom = 218.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j1ohw")

[node name="Melds" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1160.0
offset_right = 1160.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_db5cs")

[connection signal="change_cards_selected" from="." to="MeldButton" method="_on_selection_changed"]
[connection signal="change_cards_selected" from="." to="DiscardButton" method="_on_selection_changed"]
[connection signal="pressed" from="DiscardButton" to="." method="_on_discard_pressed"]
[connection signal="child_entered_tree" from="Hand" to="Hand" method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="Hand" to="Hand" method="_on_child_exiting_tree"]
